# sasd2019g11

./: docker.sh
00_strings/cryptomaster/: Makefile  crypto_masters_challenge.c  exploit  main.elf
00_strings/terminator/: .gitignore  Makefile  exploit  main.elf  msg.h  terminator.c
01_environment/cmacro/: Makefile  exploit  gcc  main.c  main.elf
01_environment/fast_math/: Makefile  avg  avg.c  execute_permission.sh  exploit  fast_math.c  main.elf  reader  sum  sum.c
01_environment/pluginsystem/: Makefile  adduser.c  auth.c  exploit  listuser.c  main.c  main.elf  userdata.db  usrmngr  usrmngr.h
01_environment/pluginsystem/hook_dir/: hooked_auth.c
01_environment/preload_me/: execute_permission.sh  exploit  hook.c  main.elf
02_buffer/combined/: .gitignore  exploit
02_buffer/echo_service/: .gitignore  Makefile  echo_service.c  exploit  main.elf
02_buffer/my_first_rop_chain/: .gitignore  Makefile  create_payload.py  exploit  generate_custom_binary.sh  link.ld  main.c  main.elf
02_buffer/random_pin_generator/: .gitignore  Makefile  execute_permission.sh  exploit  main.elf  random_pin_generator.c
03_integer/callcenter_situations/: Makefile  exploit  main.c  main.elf
03_integer/card_game/: Makefile  exploit  flag.txt  main.c  main.elf  msg.h
03_integer/nice_sequences/: Makefile  exploit  main.c  main.elf
03_integer/pgminverter/: .gitignore  Makefile  attack.pgm  exploit  main.elf  pgminverter.c
03_integer/rust/: Cargo.toml  Makefile  exploit  main.elf
03_integer/rust/src/: main.rs
04_heap/calculator/: Makefile  calculator.c  exploit  main.elf
04_heap/heap_overflow/: .gitignore  Makefile  block_chain_manager.c  exploit  main.elf
05_format/guess_a_number/: .gitignore  Makefile  exploit  main.c  main.elf
05_format/reveal_the_secret/: .gitignore  exploit  exploit2  main.c  main.elf
06_bonus/angr_management/: angr_management  execute_permission.sh  exploit
06_bonus/turing_completeness/: angr_trial.py  exploit  note.txt
defensive/: CMakeLists.txt  README.md  docker.sh
defensive/libfaultinject/: CMakeLists.txt  alloc_wrapper.c  alloc_wrapper.h
defensive/libtwelf/: CMakeLists.txt  ansi.h  internal_types.h  twelf.c  util.c  util.h
defensive/libtwelf/api/: libtwelf.h  libtwelf_types.h  twelf.h
defensive/test_elfs/: .gitignore  empty.asm  empty.elf  gcc1.elf  generate.sh  infiniteloop_mini.elf  invalid_elf_header1.elf  invalid_elf_header2.elf  invalid_elf_header3.elf  invalid_elf_header4.elf  invalid_elf_header5.elf  invalid_elf_header6.elf  invalid_elf_header7.elf  invalid_elf_header8.elf  invalid_elf_header9.elf  invalid_program_header1.elf  invalid_program_header2.elf  invalid_program_header3.elf  invalid_program_header4.elf  invalid_program_header5.elf  invalid_program_header6.elf  invalid_program_header7.elf  invalid_program_header8.elf  invalid_program_header9.elf  invalid_section_header1.elf  invalid_section_header10.elf  invalid_section_header11.asm  invalid_section_header2.elf  invalid_section_header3.elf  invalid_section_header4.elf  invalid_section_header5.elf  invalid_section_header6.elf  invalid_section_header7.elf  invalid_section_header8.elf  invalid_section_header9.elf  invalid_symbol_st_name.elf  orphaned_alloc_section.elf  overlapped_section.elf  overlapped_segment.elf  overlapped_segment2.elf  (+17 more)
defensive/tests/: CMakeLists.txt  afl.sh  readtwelf.c  valgrind.supp
defensive/tests/testsuite/: testcases.c
warmup/: Makefile  exploit  main.elf  teaser.c
